--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -53,6 +53,11 @@
           <span class="text-[15px] ml-4 text-gray-200">About</span>
         </a>
 
+        <a href="/gallery" class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
+          <i class="bi bi-card-image"></i>
+          <span class="text-[15px] ml-4 text-gray-200">Gallery</span>
+        </a>
+
         <hr class="my-4 text-gray-600">
 
         <a href="/confirmation" class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
