--- a/views/admin/gallery/view_gallery.ejs
+++ b/views/admin/gallery/view_gallery.ejs
@@ -20,7 +20,7 @@
         </div>
         <div class="shadow mt-5 overflow-hidden border-b border-gray-200 sm:rounded-lg">
             <div class="pr-16">
-                
+                <%- include ./table.ejs %>
             </div>
         </div>
     </div>
