--- a/views/admin/bank/add.ejs
+++ b/views/admin/bank/add.ejs
@@ -28,6 +28,12 @@
             <input id="bankName" name="bankName" type="text" placeholder="Masukkan nama bank" class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline-red-600">
           </div>
           <div class="mb-6">
+            <label class="block text-gray-700 font-semibold mb-2" for="noWhatsapp">
+              Nomor whatsapp
+            </label>
+            <input id="noWhatsapp" name="noWhatsapp" type="text" placeholder="Masukkan nama bank" class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline-red-600">
+          </div>
+          <div class="mb-6">
             <label class="block text-gray-700 font-semibold mb-2" for="noRekening">
               Nomor rekening
             </label>
