--- a/views/admin/bank/table.ejs
+++ b/views/admin/bank/table.ejs
@@ -11,6 +11,9 @@
             Nama bank
         </th>
         <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+            Nomor whatsapp
+        </th>
+        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
             No rekening
         </th>
         <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -29,6 +32,9 @@
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap">
                     <%= bank[i].bankName %>
+                </td>
+                <td class="px-6 py-4 whitespace-nowrap">
+                    <%= bank[i].noWhatsapp %>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap">
                     <%= bank[i].noRekening %>
