--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -43,6 +43,18 @@
 
         <hr class="my-4 text-gray-600">
 
+        <a href="/confirmation" class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
+          <i class="bi bi-envelope-fill"></i>
+          <span class="text-[15px] ml-4 text-gray-200">Confirmation</span>
+        </a>
+
+        <a href="/registrated" class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
+          <i class="bi bi-check-circle-fill"></i>
+          <span class="text-[15px] ml-4 text-gray-200">Registrated</span>
+        </a>
+
+        <hr class="my-4 text-gray-600">
+
         <a href="/logo" class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
           <i class="bi bi-bank"></i>
           <span class="text-[15px] ml-4 text-gray-200">Logo</span>
@@ -58,16 +70,9 @@
           <span class="text-[15px] ml-4 text-gray-200">Gallery</span>
         </a>
 
-        <hr class="my-4 text-gray-600">
-
-        <a href="/confirmation" class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
-          <i class="bi bi-envelope-fill"></i>
-          <span class="text-[15px] ml-4 text-gray-200">Confirmation</span>
-        </a>
-
-        <a href="/registrated" class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
-          <i class="bi bi-check-circle-fill"></i>
-          <span class="text-[15px] ml-4 text-gray-200">Registrated</span>
+        <a href="/sosmed" class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
+          <i class="bi bi-instagram"></i>
+          <span class="text-[15px] ml-4 text-gray-200">Sosmed</span>
         </a>
 
         <a class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
