--- a/views/admin/dashboard/view_dashboard.ejs
+++ b/views/admin/dashboard/view_dashboard.ejs
@@ -18,19 +18,19 @@
           <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mt-14">
             <div class="bg-white shadow-md rounded-lg p-6">
               <h2 class="text-lg font-semibold text-gray-800 mb-2">Membership</h2>
-              <p class="text-gray-600">15</p>
+              <p class="text-gray-600"><%= count.membership %></p>
             </div>
             <div class="bg-white shadow-md rounded-lg p-6">
               <h2 class="text-lg font-semibold text-gray-800 mb-2">Bank</h2>
-              <p class="text-gray-600">$3,000</p>
+              <p class="text-gray-600"><%= count.bank %></p>
             </div>
             <div class="bg-white shadow-md rounded-lg p-6">
               <h2 class="text-lg font-semibold text-gray-800 mb-2">Training</h2>
-              <p class="text-gray-600">2</p>
+              <p class="text-gray-600"><%= count.training %></p>
             </div>
             <div class="bg-white shadow-md rounded-lg p-6">
               <h2 class="text-lg font-semibold text-gray-800 mb-2">Confirmation</h2>
-              <p class="text-gray-600">3</p>
+              <p class="text-gray-600"><%= count.confirmation %></p>
             </div>
           </div>
         </div>
