update table gallery

--- a/views/admin/gallery/table.ejs
+++ b/views/admin/gallery/table.ejs
@@ -25,7 +25,7 @@
                     <%= gallery[i].title %>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap">
-                    <img src="http://localhost:8000/uploads/gallery/<%= gallery[i].image %>" class="w-[200px]" />
+                    <img src="https://fight-camp-server-130806.up.railway.app/uploads/gallery/<%= gallery[i].image %>" class="w-[200px]" />
                 </td>
 
                 <td class="px-6 py-4 whitespace-nowrap">
